--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,6 +1,9 @@
+
+
+
 body {
 
     font-family: 'Poppins', sans-serif;
-    background-color: rgb(247, 255, 246);
+    background-color: $color-fondo;
 
 }
