--- a/scss/pages/_blog.scss
+++ b/scss/pages/_blog.scss
@@ -7,7 +7,7 @@ main {
     }
     .box {
         display: inline-flex;
-        background-color: gainsboro;
+        background-color: color-cajas;
         margin: 50px 50px 10px 50px;
         border-radius: 5px;
         overflow: hidden;
