--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,3 +1,7 @@
+$color-fondo: white;
+$color-secundario: #cedc00;
+
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -5,7 +9,7 @@
 }
 a {
     text-decoration: none;
-    color: #cedc00;
+    color: $color-secundario
 }
 
 ul,
@@ -14,5 +18,5 @@ ol {
 }
 
 body{
-    background-color: rgb(247, 255, 246); 
+    background-color: $color-fondo
 }
