--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,5 +1,9 @@
+$color-primario: #033519fb;
+$color-secundario: #cedc00;
+
+
 header {
-    background-color: rgba(3, 53, 25, 0.986);
+    background-color: $color-primario;
     top: 5px;
     
 
@@ -16,7 +20,7 @@ header {
         justify-content: center;
 
         h1 {
-            color: #cedc00;
+            color: $color-secundario;
         }
 
 
