--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -1,3 +1,6 @@
+$color-cajas:gainsboro;
+
+
 main {
     section {
         .boxNewslatter {
@@ -6,7 +9,7 @@ main {
             flex-direction: row;
             align-content: flex-end;
             justify-content: center;
-            background-color: gainsboro;
+            background-color: $color-cajas;
             margin: 40px 580px;
             padding: 64px;
             border-radius: 5px;
