--- a/scss/pages/_gpDeabudhabi.scss
+++ b/scss/pages/_gpDeabudhabi.scss
@@ -1,9 +1,24 @@
-main 
-.textosDelgp { 
-    p {
-    display: flex;
-    padding: 2px 2px 2px 2px;
-    align-items: flex-start;
-}
-    
+main {
+    .ultimoGpdisputado {
+        img {
+            width: 100%;
+        }
+
+
+
+
+    }
+
+    .textosDelgp {
+        p {
+            display: flex;
+            padding: 2px 2px 2px 2px;
+            align-items: flex-start;
+        }
+
+
+
+
+
+    }
 }
