--- a/css/style.css
+++ b/css/style.css
@@ -87,22 +87,30 @@ main .imagenDelmain {
   display: flex;
   justify-content: left;
   width: 639px;
-  height: 545px;
-  margin: -389px 1023px 117px 835px;
+  height: 341px;
+  margin: -389px 1023px 514px 881px;
+  object-fit: cover;
 }
 main .imagenDelmain2 {
   display: flex;
   justify-content: left;
-  width: 639px;
-  height: 545px;
-  margin: -662px 1102px 180px 1168px;
+  height: 341px;
+  margin: -856px 1102px 410px 1098px;
+  object-fit: cover;
 }
 main .imagenDelmain3 {
   display: flex;
   justify-content: left;
-  width: 639px;
-  height: 545px;
-  margin: -724px 1102px 180px 1500px;
+  height: 341px;
+  margin: -750px 1102px 0px 1315px;
+  object-fit: cover;
+}
+main .imagenDelmain4 {
+  display: none;
+  justify-content: left;
+  height: 341px;
+  margin: -341px 1329px 149px 1613px;
+  object-fit: cover;
 }
 main .linkReferencial {
   display: flex;
@@ -122,10 +130,10 @@ main .articulosDeblog {
 main h3 {
   text-align: center;
 }
-main .box {
+main .boxblog {
   display: inline-flex;
-  background-color: color-cajas;
-  margin: 50px 50px 10px 50px;
+  background-color: gainsboro;
+  margin: 50px 50px 10px 107px;
   border-radius: 5px;
   overflow: hidden;
   align-items: center;
@@ -133,7 +141,7 @@ main .box {
   justify-content: center;
   padding: 16px;
 }
-main .box img {
+main .boxblog img {
   width: 90px;
   align-content: center;
   padding: 5px 5px 5px 5px;
@@ -163,31 +171,36 @@ footer {
     grid-template-columns: 512px 512px;
     grid-template-rows: 150px 20px auto 1fr;
   }
-  body .box {
+  body main .box {
     display: inline-flex;
     background-color: gainsboro;
     margin: 53px 67px;
     border-radius: 5px;
+    box-shadow: 5px 5px 15px gray;
     overflow: hidden;
   }
-  body .box img {
+  body main .box img {
     max-width: 100%;
     object-fit: cover;
   }
-  body .textoDelmain p {
+  body main .textoDelmain p {
     display: flex;
     width: 388px;
     text-align: justify;
   }
-  body .imagenDelmain,
-  body .imagenDelmain2,
-  body .imagenDelmain3 {
+  body main .imagenDelmain {
+    display: flex;
+    justify-content: left;
+    width: 0px;
+    height: 805px;
+    margin: -747px 1090px 63px 554px;
+  }
+  body main .imagenDelmain2,
+  body main .imagenDelmain3,
+  body main .imagenDelmain4 {
     display: none;
   }
-  body .tituloDelapagina {
-    padding: 30px;
-  }
-  body .boxNewslatter {
+  body main .boxNewslatter {
     display: flex;
     background-color: gainsboro;
     margin: 40px 134px 10px 260px;
@@ -199,12 +212,50 @@ footer {
     flex-direction: column;
     flex-wrap: wrap;
   }
-  body .boxNewslatter h2 {
+  body main .boxNewslatter h2 {
     text-align: center;
     margin: 10px -28px 10px -23px;
   }
-  body .boxNewslatter .formularioDecontacto {
+  body main .encabezadosDeseccion h1,
+  body main .tituloDelapagina h1,
+  body main .tituloDelapagina h2,
+  body main .encabezadosDeseccion h2 {
     display: flex;
+    justify-content: center;
+    margin-top: 40px;
+    margin-bottom: 20px;
+  }
+  body main .box img {
+    display: flex;
+    align-items: center;
+    margin: 28px 114px;
+  }
+  .tituloDelapagina {
+    padding: 30px;
+  }
+  .nav {
+    flex-direction: column;
+    background-color: #07371c;
+  }
+  .ultimoGpdisputado #img {
+    width: 100%;
+    height: 100%;
+  }
+  footer .listaPie1 ul,
+  footer .listaPie2 ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 10px 10px 10px;
+  }
+  footer .listaPie1 ul h2,
+  footer .listaPie2 ul h2 {
+    display: flex;
+    flex-direction: column;
+  }
+  footer .direccion2 {
+    display: flex;
+    margin: -157px 0px 0px 0px;
   }
 }
 @media screen and (max-width: 768px) {
@@ -216,44 +267,58 @@ footer {
     grid-template-columns: 384px 384px;
     grid-template-rows: 100px 300px auto 1fr;
   }
-  body .box {
+  body main h3 {
+    margin: 10px;
+  }
+  body main .noticias {
+    display: flex;
+    align-items: center;
+    display: block;
+    margin: 0px 115px;
+  }
+  body main .box {
     display: inline-flex;
     background-color: gainsboro;
-    margin: 53px 13px;
+    margin: 50px 50px 0px 125px;
+    width: 500px;
     border-radius: 5px;
     overflow: hidden;
   }
-  body .box img {
-    display: flex;
-    align-items: center;
-    margin: 28px 114px;
+  body main .box img {
     max-width: 100%;
     object-fit: cover;
   }
-  body .imagenDelmain,
-  body .imagenDelmain2,
-  body .imagenDelmain3 {
+  body main .imagenDelmain,
+  body main .imagenDelmain2,
+  body main .imagenDelmain3,
+  body main .imagenDelmain4 {
     display: none;
   }
-  body .textoDelmain p {
+  body main .textoDelmain p {
     display: flex;
     width: 738px;
     text-align: justify;
   }
-  body .encabezadosDeseccion h1,
-  body .tituloDelapagina h1,
-  body .tituloDelapagina h2,
-  body .encabezadosDeseccion h2 {
+  body main .encabezadosDeseccion h1,
+  body main .tituloDelapagina h1,
+  body main .tituloDelapagina h2,
+  body main .encabezadosDeseccion h2 {
     display: flex;
     justify-content: center;
     margin-top: 40px;
     margin-bottom: 20px;
   }
-  body .boxNewslatter {
+  body main .box img {
+    display: flex;
+    align-items: center;
+    margin: 28px 114px;
+  }
+  body main .boxNewslatter {
     display: flex;
     background-color: gainsboro;
     margin: 40px 134px 10px 134px;
     border-radius: 5px;
+    box-shadow: 5px 5px 15px gray;
     overflow: hidden;
     align-content: center;
     width: 500px;
@@ -261,13 +326,9 @@ footer {
     flex-direction: column;
     flex-wrap: wrap;
   }
-  body .boxNewslatter h2 {
-    text-align: center;
-    margin: 10px -28px 10px -23px;
-  }
   .nav {
     flex-direction: column;
-    background-color: rgba(3, 53, 25, 0.9843137255);
+    background-color: #07371c;
   }
   .ultimoGpdisputado #img {
     width: 100%;
@@ -291,49 +352,41 @@ footer {
     grid-template-areas: "header" "nav" "nav" "main" "pie";
     grid-template-columns: 150px;
     grid-template-rows: 100px 1fr 1fr auto 1fr;
+  }
+  body {
     display: block;
   }
-  body .tituloDelapagina {
+  .tituloDelapagina {
     padding: 30px;
   }
-  body .nav {
+  .nav {
     flex-direction: column;
   }
-  body .ultimoGpdisputado #img {
+  .ultimoGpdisputado #img {
     width: 100%;
     height: 100%;
   }
-  body .box {
+  main .box {
     background-color: gainsboro;
     margin: 13px -138px 32px 38px;
     border-radius: 5px;
+    box-shadow: 5px 5px 15px gray;
     overflow: hidden;
     align-items: center;
     justify-content: center;
     width: 340px;
   }
-  body .box img {
-    display: flex;
-    align-items: center;
-    margin: 28px 114px;
-    max-width: 100%;
-    object-fit: cover;
-  }
-  body .imagenDelmain,
-  body .imagenDelmain2,
-  body .imagenDelmain3 {
-    display: none;
-  }
-  body .textoDelmain p {
+  main .textoDelmain p {
     display: flex;
     width: 385px;
     text-align: justify;
   }
-  body .boxNewslatter {
+  main .boxNewslatter {
     display: flex;
     background-color: gainsboro;
     margin: 16px 215px 18px 11px;
     border-radius: 5px;
+    box-shadow: 5px 5px 15px gray;
     overflow: hidden;
     align-content: flex-end;
     width: 400px;
@@ -341,32 +394,58 @@ footer {
     align-items: center;
     flex-direction: row;
   }
-  body .boxNewslatter .labelsDeformulario {
+  main .box img {
+    display: flex;
+    align-items: center;
+    margin: 28px 114px;
+  }
+  main .imagenDelmain {
+    display: none;
+  }
+  main .imagenDelmain2 {
+    display: none;
+  }
+  main .imagenDelmain3 {
+    display: none;
+  }
+  main .imagenDelmain4 {
+    display: none;
+  }
+  main .boxNewslatter .labelsDeformulario {
     display: flex;
     flex-direction: column;
     align-content: flex-end;
-    margin: 49px 6px 15px 10px;
   }
-  body .boxNewslatter form {
-    flex-flow: column;
-    justify-content: center;
+  main .encabezadosDeseccion h2 {
+    display: flex;
+    font-size: large;
+  }
+  .box {
+    margin: 40px 35px 10px 35px;
   }
   img {
     max-width: 100%;
     object-fit: cover;
   }
-  footer .listaPie1 ul,
+  footer .listaPie1 ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 10px 10px 10px;
+  }
   footer .listaPie2 ul {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 10px 10px 10px 10px;
   }
-  footer .listaPie1 ul h2,
   footer .listaPie2 ul h2 {
     display: flex;
     flex-direction: column;
   }
+}
+main .ultimoGpdisputado img {
+  width: 100%;
 }
 main .textosDelgp p {
   display: flex;
@@ -384,7 +463,7 @@ main section .boxNewslatter {
   align-content: flex-end;
   justify-content: center;
   background-color: gainsboro;
-  margin: 40px 580px;
+  margin: 40px 454px;
   padding: 64px;
   border-radius: 5px;
   overflow: hidden;
@@ -456,9 +535,19 @@ footer a {
   text-decoration: none;
 }
 
-.noticias {
+main h3 {
+  margin: 10px;
+}
+main .noticias {
+  display: flex;
+  align-items: center;
+  display: block;
+  margin: 0px 115px;
+}
+main .noticias .box .tarjeta {
   background-color: gainsboro;
   margin: 5px;
+  border-radius: 5px;
 }
 
 /*# sourceMappingURL=style.css.map */
