--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -23,6 +23,7 @@ footer {
 
 
 @media screen and (max-width: 1024px) {
+
     body {
         grid-template-areas:
             "header header"
@@ -32,63 +33,114 @@ footer {
         grid-template-columns: 512px 512px;
         grid-template-rows: 150px 20px auto 1fr;
 
-        .box {
-            display: inline-flex;
-            background-color: $color-cajas;
-            margin: 53px 67px;
-            border-radius: 5px;
-            overflow: hidden;
+        main {
+            .box {
+                display: inline-flex;
+                background-color: gainsboro;
+                margin: 53px 67px;
+                border-radius: 5px;
+                box-shadow: 5px 5px 15px gray;
+                overflow: hidden;
 
-            img {
-                max-width: 100%;
-                object-fit: cover;
-            }
-        }
-
-        .textoDelmain p {
-            display: flex;
-            width: 388px;
-            text-align: justify;
-        }
-
-        .imagenDelmain,
-        .imagenDelmain2,
-        .imagenDelmain3 {
-            display: none;
-        }
-
-        .tituloDelapagina {
-            padding: 30px;
-        }
-
-        .boxNewslatter {
-            display: flex;
-            background-color: $color-cajas;
-            margin: 40px 134px 10px 260px;
-            border-radius: 5px;
-            overflow: hidden;
-            align-content: center;
-            width: 500px;
-            height: 500px;
-            flex-direction: column;
-            flex-wrap: wrap;
-
-            h2 {
-                text-align: center;
-                margin: 10px -28px 10px -23px;
+                img {
+                    max-width: 100%;
+                    object-fit: cover;
+                }
             }
 
-            .formularioDecontacto {
+            .textoDelmain p {
                 display: flex;
+                width: 388px;
+                text-align: justify;
+            }
+
+            .imagenDelmain {
+                display: flex;
+                justify-content: left;
+                width: 0px;
+                height: 805px;
+                margin: -747px 1090px 63px 554px;
+
+
+            }
+
+            .imagenDelmain2,
+            .imagenDelmain3,
+            .imagenDelmain4 {
+                display: none;
+            }
+
+            .boxNewslatter {
+                display: flex;
+                background-color: gainsboro;
+                margin: 40px 134px 10px 260px;
+                border-radius: 5px;
+                overflow: hidden;
+                align-content: center;
+                width: 500px;
+                height: 500px;
+                flex-direction: column;
+                flex-wrap: wrap;
+
+                h2 {
+                    text-align: center;
+                    margin: 10px -28px 10px -23px;
+                }
+            }
+
+            .encabezadosDeseccion h1,
+            .tituloDelapagina h1,
+            .tituloDelapagina h2,
+            .encabezadosDeseccion h2 {
+                display: flex;
+                justify-content: center;
+                margin-top: 40px;
+                margin-bottom: 20px;
+            }
+
+            .box img {
+                display: flex;
+                align-items: center;
+                margin: 28px 114px;
             }
         }
     }
 
+    .tituloDelapagina {
+        padding: 30px;
+    }
+
+    .nav {
+        flex-direction: column;
+        background-color: #07371c;
+    }
+
+    .ultimoGpdisputado #img {
+        width: 100%;
+        height: 100%;
+    }
+
+    footer {
+
+        .listaPie1 ul,
+        .listaPie2 ul {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 10px 10px 10px 10px;
+
+            h2 {
+                display: flex;
+                flex-direction: column;
+            }
+        }
+
+        .direccion2 {
+            display: flex;
+            margin: -157px 0px 0px 0px;
+        }
+    }
 }
-
-
-
-
 
 
 @media screen and (max-width: 768px) {
@@ -106,66 +158,81 @@ footer {
         grid-template-columns: 384px 384px;
         grid-template-rows: 100px 300px auto 1fr;
 
-        .box {
-            display: inline-flex;
-            background-color: $color-cajas;
-            margin: 53px 13px;
-            border-radius: 5px;
-            overflow: hidden;
+        main {
+            h3 {
 
-            img {
+                margin: 10px;
+            }
+
+            .noticias {
+                display: flex;
+                align-items: center;
+                display: block;
+                margin: 0px 115px;
+            }
+
+            .box {
+                display: inline-flex;
+                background-color: gainsboro;
+                margin: 50px 50px 0px 125px;
+                width: 500px;
+                border-radius: 5px;
+                overflow: hidden;
+
+                img {
+                    max-width: 100%;
+                    object-fit: cover;
+                }
+            }
+
+            .imagenDelmain,
+            .imagenDelmain2,
+            .imagenDelmain3,
+            .imagenDelmain4 {
+                display: none;
+            }
+
+            .textoDelmain p {
+                display: flex;
+                width: 738px;
+                text-align: justify;
+            }
+
+            .encabezadosDeseccion h1,
+            .tituloDelapagina h1,
+            .tituloDelapagina h2,
+            .encabezadosDeseccion h2 {
+                display: flex;
+                justify-content: center;
+                margin-top: 40px;
+                margin-bottom: 20px;
+            }
+
+            .box img {
                 display: flex;
                 align-items: center;
                 margin: 28px 114px;
-                max-width: 100%;
-                object-fit: cover;
             }
-        }
 
-        .imagenDelmain,
-        .imagenDelmain2,
-        .imagenDelmain3 {
-            display: none;
-        }
-
-        .textoDelmain p {
-            display: flex;
-            width: 738px;
-            text-align: justify;
-        }
-
-        .encabezadosDeseccion h1,
-        .tituloDelapagina h1,
-        .tituloDelapagina h2,
-        .encabezadosDeseccion h2 {
-            display: flex;
-            justify-content: center;
-            margin-top: 40px;
-            margin-bottom: 20px;
-        }
-
-        .boxNewslatter {
-            display: flex;
-            background-color: $color-cajas;
-            margin: 40px 134px 10px 134px;
-            border-radius: 5px;
-            overflow: hidden;
-            align-content: center;
-            width: 500px;
-            height: 500px;
-            flex-direction: column;
-            flex-wrap: wrap;
-
-            h2 {
-                text-align: center;
-                margin: 10px -28px 10px -23px;
+            .boxNewslatter {
+                display: flex;
+                background-color: gainsboro;
+                margin: 40px 134px 10px 134px;
+                border-radius: 5px;
+                box-shadow: 5px 5px 15px gray;
+                overflow: hidden;
+                align-content: center;
+                width: 500px;
+                height: 500px;
+                flex-direction: column;
+                flex-wrap: wrap;
             }
         }
     }
 
     .nav {
         flex-direction: column;
-        background-color: $color-primario;
+        background-color: #07371c;
     }
 
     .ultimoGpdisputado #img {
@@ -203,75 +270,94 @@ footer {
             "pie";
         grid-template-columns: 150px;
         grid-template-rows: 100px 1fr 1fr auto 1fr;
+    }
+
+    body {
         display: block;
+    }
 
-        .tituloDelapagina {
-            padding: 30px;
-        }
+    .tituloDelapagina {
 
-        .nav {
-            flex-direction: column;
-        }
+        padding: 30px;
+    }
 
-        .ultimoGpdisputado #img {
-            width: 100%;
-            height: 100%;
-        }
+    .nav {
+        flex-direction: column;
+    }
 
-        .box {
-            background-color: $color-cajas;
-            margin: 13px -138px 32px 38px;
-            border-radius: 5px;
-            overflow: hidden;
-            align-items: center;
-            justify-content: center;
-            width: 340px;
+    .ultimoGpdisputado #img {
+        width: 100%;
+        height: 100%;
+    }
 
-            img {
-                display: flex;
-                align-items: center;
-                margin: 28px 114px;
-                max-width: 100%;
-                object-fit: cover;
-            }
-        }
+    main .box {
+        background-color: gainsboro;
+        margin: 13px -138px 32px 38px;
+        border-radius: 5px;
+        box-shadow: 5px 5px 15px gray;
+        overflow: hidden;
+        align-items: center;
+        justify-content: center;
+        width: 340px;
+    }
 
-        .imagenDelmain,
-        .imagenDelmain2,
-        .imagenDelmain3 {
-            display: none;
-        }
+    main .textoDelmain p {
+        display: flex;
+        width: 385px;
+        text-align: justify;
+    }
 
-        .textoDelmain p {
-            display: flex;
-            width: 385px;
-            text-align: justify;
-        }
+    main .boxNewslatter {
+        display: flex;
+        background-color: gainsboro;
+        margin: 16px 215px 18px 11px;
+        border-radius: 5px;
+        box-shadow: 5px 5px 15px gray;
+        overflow: hidden;
+        align-content: flex-end;
+        width: 400px;
+        height: 480px;
+        align-items: center;
+        flex-direction: row;
+    }
 
-        .boxNewslatter {
-            display: flex;
-            background-color: $color-cajas;
-            margin: 16px 215px 18px 11px;
-            border-radius: 5px;
-            overflow: hidden;
-            align-content: flex-end;
-            width: 400px;
-            height: 480px;
-            align-items: center;
-            flex-direction: row;
+    main .box img {
+        display: flex;
+        align-items: center;
+        margin: 28px 114px;
+    }
 
-            .labelsDeformulario {
-                display: flex;
-                flex-direction: column;
-                align-content: flex-end;
-                margin: 49px 6px 15px 10px;
-            }
+    main .imagenDelmain {
+        display: none;
+    }
 
-            form {
-                flex-flow: column;
-                justify-content: center;
-            }
-        }
+    main .imagenDelmain2 {
+        display: none
+    }
+
+    main .imagenDelmain3 {
+        display: none
+    }
+
+    main .imagenDelmain4 {
+        display: none
+    }
+
+    main .boxNewslatter .labelsDeformulario {
+        display: flex;
+        flex-direction: column;
+        align-content: flex-end;
+
+    }
+
+    main .encabezadosDeseccion h2 {
+        display: flex;
+        font-size: large;
+    }
+
+
+    .box {
+        margin: 40px 35px 10px 35px;
     }
 
     img {
@@ -279,19 +365,22 @@ footer {
         object-fit: cover;
     }
 
-    footer {
+    footer .listaPie1 ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px 10px 10px 10px;
+    }
 
-        .listaPie1 ul,
-        .listaPie2 ul {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 10px 10px 10px 10px;
+    footer .listaPie2 ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px 10px 10px 10px;
+    }
 
-            h2 {
-                display: flex;
-                flex-direction: column;
-            }
-        }
+    footer .listaPie2 ul h2 {
+        display: flex;
+        flex-direction: column;
     }
 }
