--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -41,31 +41,46 @@ main {
         }
     }
 
+
+
     .imagenDelmain {
         display: flex;
         justify-content: left;
         width: 639px;
-        height: 545px;
-        margin: -389px 1023px 117px 835px;
-
+        height: 341px;
+        margin: -389px 1023px 514px 881px;
+        object-fit: cover;
 
     }
 
     .imagenDelmain2 {
         display: flex;
         justify-content: left;
-        width: 639px;
-        height: 545px;
-        margin: -662px 1102px 180px 1168px
+
+        height: 341px;
+        margin: -856px 1102px 410px 1098px;
+        object-fit: cover;
     }
+
 
     .imagenDelmain3 {
         display: flex;
         justify-content: left;
-        width: 639px;
-        height: 545px;
-        margin: -724px 1102px 180px 1500px
+        height: 341px;
+        margin: -750px 1102px 0px 1315px;
+        object-fit: cover;
+
     }
+
+    .imagenDelmain4 {
+        display: none;
+        justify-content: left;
+        height: 341px;
+        margin: -341px 1329px 149px 1613px;
+        object-fit: cover;
+    }
+
+
 
 
 
