--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,17 @@ footer {
     max-width: 100%;
     object-fit: cover;
   }
+  body main .boxblog {
+    display: inline-flex;
+    background-color: gainsboro;
+    margin: 50px 50px 10px 107px;
+    border-radius: 5px;
+    overflow: hidden;
+    align-items: center;
+    width: 561px;
+    justify-content: center;
+    padding: 16px;
+  }
   body main .textoDelmain p {
     display: flex;
     width: 388px;
@@ -352,21 +363,15 @@ footer {
     grid-template-areas: "header" "nav" "nav" "main" "pie";
     grid-template-columns: 150px;
     grid-template-rows: 100px 1fr 1fr auto 1fr;
-  }
-  body {
     display: block;
   }
-  .tituloDelapagina {
+  body .tituloDelapagina {
     padding: 30px;
   }
-  .nav {
+  body .nav {
     flex-direction: column;
   }
-  .ultimoGpdisputado #img {
-    width: 100%;
-    height: 100%;
-  }
-  main .box {
+  body main .box {
     background-color: gainsboro;
     margin: 13px -138px 32px 38px;
     border-radius: 5px;
@@ -376,12 +381,16 @@ footer {
     justify-content: center;
     width: 340px;
   }
-  main .textoDelmain p {
+  body main .box img {
+    max-width: 100%;
+    object-fit: cover;
+  }
+  body main .textoDelmain p {
     display: flex;
     width: 385px;
     text-align: justify;
   }
-  main .boxNewslatter {
+  body main .boxNewslatter {
     display: flex;
     background-color: gainsboro;
     margin: 16px 215px 18px 11px;
@@ -394,51 +403,32 @@ footer {
     align-items: center;
     flex-direction: row;
   }
-  main .box img {
-    display: flex;
-    align-items: center;
-    margin: 28px 114px;
-  }
-  main .imagenDelmain {
-    display: none;
-  }
-  main .imagenDelmain2 {
-    display: none;
-  }
-  main .imagenDelmain3 {
-    display: none;
-  }
-  main .imagenDelmain4 {
-    display: none;
-  }
-  main .boxNewslatter .labelsDeformulario {
+  body main .boxNewslatter .labelsDeformulario {
     display: flex;
     flex-direction: column;
     align-content: flex-end;
   }
-  main .encabezadosDeseccion h2 {
+  body main .imagenDelmain,
+  body main .imagenDelmain2,
+  body main .imagenDelmain3,
+  body main .imagenDelmain4 {
+    display: none;
+  }
+  body main .encabezadosDeseccion h2 {
     display: flex;
     font-size: large;
   }
-  .box {
+  body main .box {
     margin: 40px 35px 10px 35px;
   }
-  img {
-    max-width: 100%;
-    object-fit: cover;
-  }
-  footer .listaPie1 ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px 10px 10px 10px;
-  }
+  footer .listaPie1 ul,
   footer .listaPie2 ul {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 10px 10px 10px 10px;
   }
+  footer .listaPie1 ul h2,
   footer .listaPie2 ul h2 {
     display: flex;
     flex-direction: column;
