--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -47,7 +47,17 @@ footer {
                     object-fit: cover;
                 }
             }
-
+            .boxblog {
+                display: inline-flex;
+                background-color: $color-cajas;
+                margin: 50px 50px 10px 107px;
+                border-radius: 5px;
+                overflow: hidden;
+                align-items: center;
+                width: 561px;
+                justify-content: center;
+                padding: 16px;
+            }  
             .textoDelmain p {
                 display: flex;
                 width: 388px;
@@ -262,125 +272,97 @@ footer {
 @media screen and (max-width: 425px) {
 
     body {
-        grid-template-areas:
-            "header"
-            "nav"
-            "nav"
-            "main"
+        grid-template-areas: 
+            "header" 
+            "nav" 
+            "nav" 
+            "main" 
             "pie";
         grid-template-columns: 150px;
         grid-template-rows: 100px 1fr 1fr auto 1fr;
-    }
-
-    body {
         display: block;
+
+        .tituloDelapagina {
+            padding: 30px;
+        }
+
+        .nav {
+            flex-direction: column;
+        }
+
+        main {
+            .box {
+                background-color: gainsboro;
+                margin: 13px -138px 32px 38px;
+                border-radius: 5px;
+                box-shadow: 5px 5px 15px gray;
+                overflow: hidden;
+                align-items: center;
+                justify-content: center;
+                width: 340px;
+
+                img {
+                    max-width: 100%;
+                    object-fit: cover;
+                }
+            }
+
+            .textoDelmain p {
+                display: flex;
+                width: 385px;
+                text-align: justify;
+            }
+
+            .boxNewslatter {
+                display: flex;
+                background-color: gainsboro;
+                margin: 16px 215px 18px 11px;
+                border-radius: 5px;
+                box-shadow: 5px 5px 15px gray;
+                overflow: hidden;
+                align-content: flex-end;
+                width: 400px;
+                height: 480px;
+                align-items: center;
+                flex-direction: row;
+
+                .labelsDeformulario {
+                    display: flex;
+                    flex-direction: column;
+                    align-content: flex-end;
+                }
+            }
+
+            .imagenDelmain, 
+            .imagenDelmain2, 
+            .imagenDelmain3, 
+            .imagenDelmain4 {
+                display: none;
+            }
+
+            .encabezadosDeseccion h2 {
+                display: flex;
+                font-size: large;
+            }
+
+            .box {
+                margin: 40px 35px 10px 35px;
+            }
+        }
     }
 
-    .tituloDelapagina {
+    footer {
+        .listaPie1 ul, 
+        .listaPie2 ul {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 10px 10px 10px 10px;
 
-        padding: 30px;
-    }
-
-    .nav {
-        flex-direction: column;
-    }
-
-    .ultimoGpdisputado #img {
-        width: 100%;
-        height: 100%;
-    }
-
-    main .box {
-        background-color: gainsboro;
-        margin: 13px -138px 32px 38px;
-        border-radius: 5px;
-        box-shadow: 5px 5px 15px gray;
-        overflow: hidden;
-        align-items: center;
-        justify-content: center;
-        width: 340px;
-    }
-
-    main .textoDelmain p {
-        display: flex;
-        width: 385px;
-        text-align: justify;
-    }
-
-    main .boxNewslatter {
-        display: flex;
-        background-color: gainsboro;
-        margin: 16px 215px 18px 11px;
-        border-radius: 5px;
-        box-shadow: 5px 5px 15px gray;
-        overflow: hidden;
-        align-content: flex-end;
-        width: 400px;
-        height: 480px;
-        align-items: center;
-        flex-direction: row;
-    }
-
-    main .box img {
-        display: flex;
-        align-items: center;
-        margin: 28px 114px;
-    }
-
-    main .imagenDelmain {
-        display: none;
-    }
-
-    main .imagenDelmain2 {
-        display: none
-    }
-
-    main .imagenDelmain3 {
-        display: none
-    }
-
-    main .imagenDelmain4 {
-        display: none
-    }
-
-    main .boxNewslatter .labelsDeformulario {
-        display: flex;
-        flex-direction: column;
-        align-content: flex-end;
-
-    }
-
-    main .encabezadosDeseccion h2 {
-        display: flex;
-        font-size: large;
-    }
-
-
-    .box {
-        margin: 40px 35px 10px 35px;
-    }
-
-    img {
-        max-width: 100%;
-        object-fit: cover;
-    }
-
-    footer .listaPie1 ul {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 10px 10px 10px 10px;
-    }
-
-    footer .listaPie2 ul {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 10px 10px 10px 10px;
-    }
-
-    footer .listaPie2 ul h2 {
-        display: flex;
-        flex-direction: column;
+            h2 {
+                display: flex;
+                flex-direction: column;
+            }
+        }
     }
 }
