--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,3 +1,9 @@
+%imagenDelmain {
+    display: flex;
+    justify-content: left;
+
+}
+
 main {
     .ultimoGpdisputado {
         .portadaDelhome {
@@ -54,9 +60,7 @@ main {
     }
 
     .imagenDelmain2 {
-        display: flex;
-        justify-content: left;
-
+        @extend %imagenDelmain;
         height: 341px;
         margin: -856px 1102px 410px 1098px;
         object-fit: cover;
@@ -64,8 +68,7 @@ main {
 
 
     .imagenDelmain3 {
-        display: flex;
-        justify-content: left;
+        @extend %imagenDelmain;
         height: 341px;
         margin: -750px 1102px 0px 1315px;
         object-fit: cover;
@@ -73,8 +76,8 @@ main {
     }
 
     .imagenDelmain4 {
+        @extend %imagenDelmain;
         display: none;
-        justify-content: left;
         height: 341px;
         margin: -341px 1329px 149px 1613px;
         object-fit: cover;
