--- a/scss/pages/_noticias.scss
+++ b/scss/pages/_noticias.scss
@@ -1,20 +1,88 @@
 $color-cajas: gainsboro;
+
 main {
-    h3{
+    h3 {
         margin: 10px;
     }
-    .noticias  {
+
+    .noticias {
         display: flex;
         align-items: center;
         display: block;
         margin: 0px 115px;
-    
+
         .box {
-    
-            .tarjeta {
-                background-color: $color-cajas;
+
+            display: flex;
+            flex-direction: row;
+            display: inline-flex;
+            margin: 20px 70px 20px 84px;
+
+
+            .tarjetaNoticia1 {
+                display: flex;
+                background-color: gainsboro;
                 margin: 5px;
                 border-radius: 5px;
+                align-content: center;
+                width: 500px;
+                margin: 20px 20px 20px 20px;
+                flex-direction: column;
+            }
+
+            .tarjetaNoticia2 {
+                display: flex;
+                background-color: gainsboro;
+                margin: 5px;
+                border-radius: 5px;
+                align-content: center;
+                width: 500px;
+                margin: 20px 20px 20px 20px;
+                flex-direction: column;
+            }
+
+            .tarjetaNoticia3 {
+                display: flex;
+                background-color: gainsboro;
+                margin: 5px;
+                border-radius: 5px;
+                align-content: center;
+                width: 500px;
+                margin: 20px 20px 20px 20px;
+                flex-direction: column;
+            }
+
+            .tarjetaNoticia4 {
+                display: flex;
+                background-color: gainsboro;
+                margin: 5px;
+                border-radius: 5px;
+                align-content: center;
+                width: 500px;
+                margin: 20px 20px 20px 20px;
+                flex-direction: column;
+            }
+
+            .tarjetaNoticia5 {
+                display: flex;
+                background-color: gainsboro;
+                margin: 5px;
+                border-radius: 5px;
+                align-content: center;
+                width: 500px;
+                margin: 20px 20px 20px 20px;
+                flex-direction: column;
+            }
+
+            .tarjetaNoticia6 {
+                display: flex;
+                background-color: gainsboro;
+                margin: 5px;
+                border-radius: 5px;
+                align-content: center;
+                width: 500px;
+                margin: 20px 20px 20px 20px;
+                flex-direction: column;
             }
         }
     }
