se crearon y ordenaron los mixins

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 
 @import "base/reset";
+@import "abstracts/mixins";
 @import "base/typography";
 @import "layout/header";
 @import "layout/navigation";
@@ -11,7 +12,5 @@
 @import "pages/contact";
 @import "layout/footer";
 @import "pages/noticias";
-
-
 
 
