se realizaron cambios en las media querys añadiendo divs para diferentes secciones de los blogs y noticias aun en desarrollo para alcanzar una mejor distribucion de algunos elementos

--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,5 +1,5 @@
 $color-fondo: white;
-$color-secundario: #cedc00;
+$color-secundario: #b5be35;
 $color-cajas: gray;
 
 
@@ -10,7 +10,7 @@ $color-cajas: gray;
 }
 a {
     text-decoration: none;
-    color: $color-secundario
+    color: $color-secundario;
 }
 
 ul,
