--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 a {
   text-decoration: none;
-  color: #cedc00;
+  color: #b5be35;
 }
 
 ul,
@@ -23,6 +23,172 @@ body {
   background-color: white;
 }
 
+main .carouselExampleCaptions {
+  color: #b5be35;
+}
+
+main .ultimoGpdisputado .portadaDelhome img {
+  width: 100%;
+}
+main .textoDelmain p {
+  display: flex;
+  text-align: left;
+  width: 720px;
+}
+main .encabezadosDeseccion h2 {
+  display: flex;
+  justify-content: center;
+  margin: 100px 10px 100px 10px;
+}
+main .encabezadosDeseccion h1 {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 90px;
+}
+main .imagenDelmain {
+  display: flex;
+  justify-content: left;
+  margin: -389px 1023px 514px 881px;
+  object-fit: cover;
+  width: 639px;
+  height: 341px;
+  object-fit: cover;
+}
+main .imagenDelmain2 {
+  display: flex;
+  justify-content: left;
+  margin: -856px 1102px 410px 1098px;
+  object-fit: cover;
+  height: 341px;
+  object-fit: cover;
+}
+main .imagenDelmain3 {
+  display: flex;
+  justify-content: left;
+  margin: -750px 1102px 0px 1315px;
+  object-fit: cover;
+  height: 341px;
+  object-fit: cover;
+}
+main .imagenDelmain4 {
+  display: flex;
+  justify-content: left;
+  margin: -341px 1329px 149px 1613px;
+  object-fit: cover;
+  display: none;
+  height: 341px;
+  object-fit: cover;
+}
+main .linkReferencial {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2px 2px 0px 2px;
+}
+main p {
+  margin: 5px 20px 5px 20px;
+  text-align: justify;
+}
+
+main .articulosDeblog {
+  justify-content: center;
+}
+main h3 {
+  text-align: center;
+}
+main .boxblog {
+  display: inline-flex;
+  background-color: gainsboro;
+  margin: 50px 50px 10px 107px;
+  border-radius: 5px;
+  overflow: hidden;
+  align-items: center;
+  width: 355px;
+  justify-content: center;
+  padding: 16px;
+}
+main .boxblog img {
+  width: 733px;
+  align-content: center;
+  padding: -105px 5px 5px 5px;
+  margin: 54px -202px 31px -200px;
+  object-fit: contain;
+}
+
+main .ultimoGpdisputado img {
+  width: 100%;
+}
+main .textosDelgp p {
+  display: flex;
+  padding: 2px 2px 2px 2px;
+  align-items: flex-start;
+}
+
+main section .boxNewslatter {
+  display: flex;
+  flex-direction: row;
+  align-content: flex-end;
+  justify-content: center;
+  background-color: gainsboro;
+  margin: 40px 555px;
+  padding: 64px;
+  border-radius: 5px;
+  overflow: hidden;
+  width: 700px;
+  max-width: 100%;
+  height: auto;
+}
+main section .boxNewslatter h2 {
+  text-align: center;
+  margin: -22px -287px 10px -23px;
+}
+main section .boxNewslatter .formularioDecontacto {
+  display: flex;
+  margin: 41px 2px 2px 2px;
+  padding: 0px 2px 2px 2px;
+}
+main section .boxNewslatter .formularioDecontacto .labelsDeformulario {
+  display: flex;
+  flex-direction: column;
+  align-content: flex-end;
+  flex-flow: column;
+  justify-content: center;
+  flex-flow: column;
+  flex-direction: column;
+  margin: 20px 10px 10px 10px;
+  padding: 5px 5px 5px 5px;
+  font-size: larger;
+  font-weight: 500;
+}
+
+main .noticias .box .tarjetaNoticia6, main .noticias .box .tarjetaNoticia5, main .noticias .box .tarjetaNoticia4, main .noticias .box .tarjetaNoticia3, main .noticias .box .tarjetaNoticia2, main .noticias .box .tarjetaNoticia1 {
+  display: flex;
+  background-color: gainsboro;
+  margin: 5px;
+  border-radius: 5px;
+  align-content: center;
+  width: 500px;
+  margin: 20px 20px 20px 20px;
+  flex-direction: column;
+}
+
+main h5 {
+  margin: 10px;
+}
+main .noticias {
+  display: flex;
+  align-items: center;
+  display: block;
+  margin: 0px 57px;
+}
+main .noticias .box {
+  display: flex;
+  flex-direction: row;
+  display: inline-flex;
+  margin: 17px 30px 20px 20px;
+}
 header {
   background-color: rgba(3, 53, 25, 0.9843137255);
   top: 5px;
@@ -37,7 +203,7 @@ header .tituloDelapagina {
   justify-content: center;
 }
 header .tituloDelapagina h1 {
-  color: #cedc00;
+  color: #eeff00;
 }
 header .bg-body-tertiary {
   --bs-bg-opacity: 0;
@@ -55,7 +221,7 @@ element.style {
 }
 
 .nav-link {
-  color: #535719;
+  color: #eeff00;
   --bs-emphasis-color: $color-enfasisnav;
 }
 
@@ -86,28 +252,41 @@ footer {
     grid-template-columns: 512px 512px;
     grid-template-rows: 150px 20px auto 1fr;
   }
-  body main .box {
+  body main .noticias {
+    display: flex;
+    align-items: center;
+    display: block;
+    margin: 0px 37px;
+  }
+  body main .noticias .box {
     display: inline-flex;
     background-color: gainsboro;
-    margin: 53px 67px;
+    margin: 53px 191px;
     border-radius: 5px;
     box-shadow: 5px 5px 15px gray;
     overflow: hidden;
   }
-  body main .box img {
+  body main .noticias .box img {
     max-width: 100%;
     object-fit: cover;
   }
   body main .boxblog {
     display: inline-flex;
     background-color: gainsboro;
-    margin: 50px 50px 10px 107px;
+    margin: 50px 50px 10px 233px;
     border-radius: 5px;
     overflow: hidden;
     align-items: center;
     width: 561px;
     justify-content: center;
     padding: 16px;
+  }
+  body main .boxblog img {
+    width: 733px;
+    align-content: center;
+    padding: -105px 5px 5px 5px;
+    margin: 54px -202px 31px -165px;
+    object-fit: contain;
   }
   body main .textoDelmain p {
     display: flex;
@@ -140,7 +319,7 @@ footer {
   }
   body main .boxNewslatter h2 {
     text-align: center;
-    margin: 10px -28px 10px -23px;
+    margin: -51px -527px 340px -237px;
   }
   body main .encabezadosDeseccion h1,
   body main .tituloDelapagina h1,
@@ -200,7 +379,11 @@ footer {
     display: flex;
     align-items: center;
     display: block;
-    margin: 0px 115px;
+    margin: 0px -61px;
+  }
+  body main .articulosDeblog {
+    justify-content: center;
+    margin: 2px 2px 2px -122px;
   }
   body main .box {
     display: inline-flex;
@@ -302,6 +485,102 @@ footer {
     max-width: 100%;
     object-fit: cover;
   }
+  body main .noticias {
+    display: flex;
+    align-items: center;
+    display: block;
+    margin: 2px 2px 2px -57px;
+  }
+  body main .noticias .box {
+    display: inline-flex;
+    background-color: gainsboro;
+    margin: 90px -76px 31px 102px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 15px gray;
+    overflow: hidden;
+  }
+  body main .noticias .box img {
+    height: 290px;
+    width: 350px;
+    object-fit: cover;
+    margin: 30px 20px 30px 2px;
+    object-fit: cover;
+  }
+  body main .noticias .box .tarjetaNoticia1 {
+    display: flex;
+    background-color: gainsboro;
+    margin: 5px;
+    border-radius: 5px;
+    align-content: center;
+    width: 500px;
+    margin: 20px 20px 20px 20px;
+    flex-direction: column;
+  }
+  body main .noticias .box .tarjetaNoticia2 {
+    display: flex;
+    background-color: gainsboro;
+    margin: 5px;
+    border-radius: 5px;
+    align-content: center;
+    width: 500px;
+    margin: 20px 20px 20px 20px;
+    flex-direction: column;
+  }
+  body main .noticias .box .tarjetaNoticia3 {
+    display: flex;
+    background-color: gainsboro;
+    margin: 5px;
+    border-radius: 5px;
+    align-content: center;
+    width: 500px;
+    margin: 20px 20px 20px 20px;
+    flex-direction: column;
+  }
+  body main .noticias .box .tarjetaNoticia4 {
+    display: flex;
+    background-color: gainsboro;
+    margin: 5px;
+    border-radius: 5px;
+    align-content: center;
+    width: 500px;
+    margin: 20px 20px 20px 20px;
+    flex-direction: column;
+  }
+  body main .noticias .box .tarjetaNoticia5 {
+    display: flex;
+    background-color: gainsboro;
+    margin: 5px;
+    border-radius: 5px;
+    align-content: center;
+    width: 500px;
+    margin: 20px 20px 20px 20px;
+    flex-direction: column;
+  }
+  body main .noticias .box .tarjetaNoticia6 {
+    display: flex;
+    background-color: gainsboro;
+    margin: 5px;
+    border-radius: 5px;
+    align-content: center;
+    width: 500px;
+    margin: 20px 20px 20px 20px;
+    flex-direction: column;
+  }
+  body main .articulosDeblog {
+    justify-content: center;
+    margin: 2px 2px 2px -6px;
+  }
+  body main .articulosDeblog .boxblog {
+    display: inline-flex;
+    background-color: gainsboro;
+    margin: 50px 2px 3px 29px;
+    border-radius: 5px;
+    overflow: hidden;
+    align-items: center;
+    width: 371px;
+    justify-content: center;
+    padding: 16px;
+  }
   body main .textoDelmain p {
     display: flex;
     width: 385px;
@@ -319,6 +598,10 @@ footer {
     height: 480px;
     align-items: center;
     flex-direction: row;
+  }
+  body main .boxNewslatter h2 {
+    text-align: center;
+    margin: 10px -28px 411px -23px;
   }
   body main .boxNewslatter .labelsDeformulario {
     display: flex;
@@ -390,173 +673,6 @@ footer ul li .encabezadosDeseccion {
 footer a {
   color: aliceblue;
   text-decoration: none;
-}
-
-main .carouselExampleCaptions {
-  color: #535719;
-}
-
-main .ultimoGpdisputado .portadaDelhome img {
-  width: 100%;
-}
-main .textoDelmain p {
-  display: flex;
-  text-align: left;
-  width: 720px;
-}
-main .encabezadosDeseccion h2 {
-  display: flex;
-  justify-content: center;
-  margin: 100px 10px 100px 10px;
-}
-main .encabezadosDeseccion h1 {
-  display: flex;
-  justify-content: center;
-  margin-top: 50px;
-  margin-bottom: 90px;
-}
-main .imagenDelmain {
-  display: flex;
-  justify-content: left;
-  margin: -389px 1023px 514px 881px;
-  object-fit: cover;
-  width: 639px;
-  height: 341px;
-  object-fit: cover;
-}
-main .imagenDelmain2 {
-  display: flex;
-  justify-content: left;
-  margin: -856px 1102px 410px 1098px;
-  object-fit: cover;
-  height: 341px;
-  object-fit: cover;
-}
-main .imagenDelmain3 {
-  display: flex;
-  justify-content: left;
-  margin: -750px 1102px 0px 1315px;
-  object-fit: cover;
-  height: 341px;
-  object-fit: cover;
-}
-main .imagenDelmain4 {
-  display: flex;
-  justify-content: left;
-  margin: -341px 1329px 149px 1613px;
-  object-fit: cover;
-  display: none;
-  height: 341px;
-  object-fit: cover;
-}
-main .linkReferencial {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 2px 2px 0px 2px;
-}
-main p {
-  margin: 5px 20px 5px 20px;
-  text-align: justify;
-}
-
-main .articulosDeblog {
-  justify-content: center;
-}
-main h3 {
-  text-align: center;
-}
-main .boxblog {
-  display: inline-flex;
-  background-color: gainsboro;
-  margin: 50px 50px 10px 107px;
-  border-radius: 5px;
-  overflow: hidden;
-  align-items: center;
-  width: 355px;
-  justify-content: center;
-  padding: 16px;
-}
-main .boxblog img {
-  width: 90px;
-  align-content: center;
-  padding: 5px 5px 5px 5px;
-  margin: 10px 50px 10px 50px;
-  object-fit: contain;
-}
-
-main .ultimoGpdisputado img {
-  width: 100%;
-}
-main .textosDelgp p {
-  display: flex;
-  padding: 2px 2px 2px 2px;
-  align-items: flex-start;
-}
-
-main section .boxNewslatter {
-  display: flex;
-  flex-direction: row;
-  align-content: flex-end;
-  justify-content: center;
-  background-color: gainsboro;
-  margin: 40px 454px;
-  padding: 64px;
-  border-radius: 5px;
-  overflow: hidden;
-  width: 700px;
-  max-width: 100%;
-  height: auto;
-}
-main section .boxNewslatter h2 {
-  text-align: center;
-  margin: -22px -287px 10px -23px;
-}
-main section .boxNewslatter .formularioDecontacto {
-  display: flex;
-  margin: 41px 2px 2px 2px;
-  padding: 0px 2px 2px 2px;
-}
-main section .boxNewslatter .formularioDecontacto .labelsDeformulario {
-  display: flex;
-  flex-direction: column;
-  align-content: flex-end;
-  flex-flow: column;
-  justify-content: center;
-  flex-flow: column;
-  flex-direction: column;
-  margin: 20px 10px 10px 10px;
-  padding: 5px 5px 5px 5px;
-  font-size: larger;
-  font-weight: 500;
-}
-
-main .noticias .box .tarjetaNoticia6, main .noticias .box .tarjetaNoticia5, main .noticias .box .tarjetaNoticia4, main .noticias .box .tarjetaNoticia3, main .noticias .box .tarjetaNoticia2, main .noticias .box .tarjetaNoticia1 {
-  display: flex;
-  background-color: gainsboro;
-  margin: 5px;
-  border-radius: 5px;
-  align-content: center;
-  width: 500px;
-  margin: 20px 20px 20px 20px;
-  flex-direction: column;
-}
-
-main h5 {
-  margin: 10px;
-}
-main .noticias {
-  display: flex;
-  align-items: center;
-  display: block;
-  margin: 0px 57px;
-}
-main .noticias .box {
-  display: flex;
-  flex-direction: row;
-  display: inline-flex;
-  margin: 17px 30px 20px 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
