--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -36,30 +36,45 @@ footer {
         grid-template-rows: 150px 20px auto 1fr;
 
         main {
-            .box {
-                display: inline-flex;
-                background-color: gainsboro;
-                margin: 53px 67px;
-                border-radius: 5px;
-                box-shadow: 5px 5px 15px gray;
-                overflow: hidden;
+            .noticias {
+                display: flex;
+                align-items: center;
+                display: block;
+                margin: 0px 37px;
 
-                img {
-                    max-width: 100%;
-                    object-fit: cover;
+                .box {
+                    display: inline-flex;
+                    background-color: gainsboro;
+                    margin: 53px 191px;
+                    border-radius: 5px;
+                    box-shadow: 5px 5px 15px gray;
+                    overflow: hidden;
+
+                    img {
+                        max-width: 100%;
+                        object-fit: cover;
+                    }
                 }
             }
 
             .boxblog {
                 display: inline-flex;
                 background-color: $color-cajas;
-                margin: 50px 50px 10px 107px;
+                margin: 50px 50px 10px 233px;
                 border-radius: 5px;
                 overflow: hidden;
                 align-items: center;
                 width: 561px;
                 justify-content: center;
                 padding: 16px;
+
+                img {
+                    width: 733px;
+                    align-content: center;
+                    padding: -105px 5px 5px 5px;
+                    margin: 54px -202px 31px -165px;
+                    object-fit: contain;
+                }
             }
 
             .textoDelmain p {
@@ -98,7 +113,7 @@ footer {
 
                 h2 {
                     text-align: center;
-                    margin: 10px -28px 10px -23px;
+                    margin: -51px -527px 340px -237px;
                 }
             }
 
@@ -138,7 +153,7 @@ footer {
 
         .listaPie1 ul,
         .listaPie2 ul {
-           
+
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -183,7 +198,12 @@ footer {
                 display: flex;
                 align-items: center;
                 display: block;
-                margin: 0px 115px;
+                margin: 0px -61px;
+            }
+
+            .articulosDeblog {
+                justify-content: center;
+                margin: 2px 2px 2px -122px;
             }
 
             .box {
@@ -320,6 +340,108 @@ footer {
                 }
             }
 
+            .noticias {
+                display: flex;
+                align-items: center;
+                display: block;
+                margin: 2px 2px 2px -57px;
+
+                .box {
+                    display: inline-flex;
+                    background-color: gainsboro;
+                    margin: 90px -76px 31px 102px;
+                    border-radius: 5px;
+                    box-shadow: 5px 5px 15px gray;
+                    overflow: hidden;
+                    img {
+                        height: 290px;
+                        width: 350px;
+                        object-fit: cover;
+                        margin: 30px 20px 30px 2px;
+                        object-fit: cover;
+                    }
+                    .tarjetaNoticia1 {
+                        display: flex;
+                        background-color: gainsboro;
+                        margin: 5px;
+                        border-radius: 5px;
+                        align-content: center;
+                        width: 500px;
+                        margin: 20px 20px 20px 20px;
+                        flex-direction: column;
+                    }
+                    .tarjetaNoticia2 {
+                        display: flex;
+                        background-color: gainsboro;
+                        margin: 5px;
+                        border-radius: 5px;
+                        align-content: center;
+                        width: 500px;
+                        margin: 20px 20px 20px 20px;
+                        flex-direction: column;
+                    }
+                    .tarjetaNoticia3 {
+                        display: flex;
+                        background-color: gainsboro;
+                        margin: 5px;
+                        border-radius: 5px;
+                        align-content: center;
+                        width: 500px;
+                        margin: 20px 20px 20px 20px;
+                        flex-direction: column;
+                    }
+                    .tarjetaNoticia4 {
+                        display: flex;
+                        background-color: gainsboro;
+                        margin: 5px;
+                        border-radius: 5px;
+                        align-content: center;
+                        width: 500px;
+                        margin: 20px 20px 20px 20px;
+                        flex-direction: column;
+                    }
+                    .tarjetaNoticia5 {
+                        display: flex;
+                        background-color: gainsboro;
+                        margin: 5px;
+                        border-radius: 5px;
+                        align-content: center;
+                        width: 500px;
+                        margin: 20px 20px 20px 20px;
+                        flex-direction: column;
+                    }
+                    .tarjetaNoticia6 {
+                        display: flex;
+                        background-color: gainsboro;
+                        margin: 5px;
+                        border-radius: 5px;
+                        align-content: center;
+                        width: 500px;
+                        margin: 20px 20px 20px 20px;
+                        flex-direction: column;
+                    }
+                }
+
+
+            }
+
+            .articulosDeblog {
+                justify-content: center;
+                margin: 2px 2px 2px -6px;
+
+                .boxblog {
+                    display: inline-flex;
+                    background-color: gainsboro;
+                    margin: 50px 2px 3px 29px;
+                    border-radius: 5px;
+                    overflow: hidden;
+                    align-items: center;
+                    width: 371px;
+                    justify-content: center;
+                    padding: 16px;
+                }
+            }
+
             .textoDelmain {
                 p {
                     display: flex;
@@ -340,6 +462,11 @@ footer {
                 height: 480px;
                 align-items: center;
                 flex-direction: row;
+
+                h2 {
+                    text-align: center;
+                    margin: 10px -28px 411px -23px;
+                }
 
                 .labelsDeformulario {
                     display: flex;
