--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -2,8 +2,10 @@ $color-primario: #033519fb;
 $color-secundario: #eeff00;
 
 
+
 header {
     background-color: $color-primario;
+    opacity: 95%;
     top: 5px;
     
 
