--- a/scss/pages/_gpDeabudhabi.scss
+++ b/scss/pages/_gpDeabudhabi.scss
@@ -9,11 +9,41 @@ main {
 
     }
 
+    .imagenDelgp {
+        img {
+            display: flex;
+            margin: -18px 238px 27px 1388px;
+            width: 50%;
+            height: 50%;
+        }
+
+
+
+
+    }
+    .imagenDelgp2 {
+        img {
+            display: flex;
+            margin: -18px 238px 27px 1388px;
+            width: 50%;
+            height: 50%;
+        }
+
+
+
+
+    }
     .textosDelgp {
+        display: flex;
+        margin: -565px 4px 176px 17px;
+        flex-direction: column;
+
         p {
             display: flex;
-            padding: 2px 2px 2px 2px;
-            align-items: flex-start;
+            margin: 2px 2px 2px 2px;
+            text-align: left;
+            width: 720px;
+
         }
 
 
