--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -35,9 +35,17 @@ main {
         h2 {
             display: flex;
             justify-content: center;
-            margin: 100px 10px 100px 10px;
+            margin-top: 50px;
+            margin-bottom: 90px;
+            font-size: 300%;
         }
-
+        h3 {
+            display: flex;
+            justify-content: center;
+            margin-top: 50px;
+            margin-bottom: 90px;
+            font-size: 150%;
+        }
 
     }
 
