--- a/scss/pages/_blog.scss
+++ b/scss/pages/_blog.scss
@@ -1,12 +1,23 @@
 $color-cajas: gainsboro;
 
+%parrafoBlog1 {
+    display: flex;
+    margin: 2px 2px 2px 2px;
+    flex-wrap: nowrap;
+    width: 327px;
+    height: 206px;
+    overflow: hidden;
+}
+
 main {
     .articulosDeblog {
         justify-content: center;
     }
+
     h3 {
         text-align: center;
     }
+
     .boxblog {
         display: inline-flex;
         background-color: $color-cajas;
@@ -17,6 +28,24 @@ main {
         width: 355px;
         justify-content: center;
         padding: 16px;
+        height: auto;
+
+        .parrafoBlog1 {
+            @extend %parrafoBlog1;
+
+        }
+
+        .parrafoBlog2 {
+            @extend %parrafoBlog1;
+        }
+
+        .parrafoBlog3 {
+            @extend %parrafoBlog1;
+        }
+
+        h3 {
+            text-align: center;
+        }
 
         img {
             width: 733px;
