--- a/scss/pages/_blog.scss
+++ b/scss/pages/_blog.scss
@@ -18,42 +18,46 @@ main {
         text-align: center;
     }
 
-    .boxblog {
-        display: inline-flex;
-        background-color: $color-cajas;
-        margin: 50px 50px 10px 107px;
-        border-radius: 5px;
-        overflow: hidden;
-        align-items: center;
-        width: 355px;
-        justify-content: center;
-        padding: 16px;
-        height: auto;
+    .articulosDeblog {
+        display: flex;
+margin: 2px 2px 2px 2px;
+        .boxblog {
+            display: inline-flex;
+            background-color: $color-cajas;
+            margin: 50px 50px 10px 107px;
+            border-radius: 5px;
+            overflow: hidden;
+            align-items: center;
+            width: 355px;
+            justify-content: center;
+            padding: 16px;
+            height: auto;
 
-        .parrafoBlog1 {
-            @extend %parrafoBlog1;
+            .parrafoBlog1 {
+                @extend %parrafoBlog1;
 
-        }
+            }
 
-        .parrafoBlog2 {
-            @extend %parrafoBlog1;
-        }
+            .parrafoBlog2 {
+                @extend %parrafoBlog1;
+            }
 
-        .parrafoBlog3 {
-            @extend %parrafoBlog1;
-        }
+            .parrafoBlog3 {
+                @extend %parrafoBlog1;
+            }
 
-        h3 {
-            text-align: center;
-        }
+            h3 {
+                text-align: center;
+            }
 
-        img {
-            width: 733px;
-            align-content: center;
-            padding: -105px 5px 5px 5px;
-            margin: 54px -202px 31px -200px;
-            object-fit: contain;
+            img {
+                width: 733px;
+                align-content: center;
+                padding: -105px 5px 5px 5px;
+                margin: 54px -202px 31px -200px;
+                object-fit: contain;
 
+            }
         }
     }
 }
